--- a/src/renderer/components/FieldCard/styles.module.css
+++ b/src/renderer/components/FieldCard/styles.module.css
@@ -1,6 +1,6 @@
 .card {
-  width: 440px;
-  height: 200px;
+  width: 480px;
+  height: 220px;
   background: #FFFFFF;
   box-shadow: 0px 3px 30px rgba(0, 0, 0, 0.03);
   border-radius: 10px;
@@ -17,7 +17,7 @@
 }
 
 .textContainer {
-width: 220px;
+width: 260px;
 margin-top: 20px;
 margin-bottom: 30px;
 }
@@ -25,6 +25,7 @@ margin-bottom: 30px;
 .cardTitle {
   font-weight: bold;
   font-size: 24px;
+  margin-bottom: 15px;
 }
 
 .cardText {
