--- a/src/renderer/components/WhatSection/styles.module.css
+++ b/src/renderer/components/WhatSection/styles.module.css
@@ -1,7 +1,7 @@
 .container {
   display: grid;
-  margin-left: 80px;
+  margin-left: 40px;
     grid-template-columns: repeat(2, 1fr);
-  grid-gap: 20px 20px;
+  grid-gap: 20px 15px;
     grid-template-rows: repeat(3, 1fr);
 }
