--- a/src/renderer/screens/Portal/styles.module.css
+++ b/src/renderer/screens/Portal/styles.module.css
@@ -22,7 +22,7 @@
   top: 150px;
   left: 70px;
   font-size: 60px;
-  font-family: 'Displace-Medium';
+  font-family: 'Displace-Regular';
 }
 
 .heroText {
@@ -30,7 +30,7 @@
 
   top: 280px;
   left: 70px;
-  font-family: 'Displace-Medium';
+  font-family: 'Displace-Regular';
 }
 
 .description {
